# vision_project

./: .gitignore  README.md  compose.yaml  pyproject.toml  t.py
bacekend/app/: main.py
bacekend/model/: handler.py
backend/app/: main.py  pyproject.toml  run_server.sh
backend/model/script/: run_server.sh
frontend/my-project/: next.config.mjs  package-lock.json  package.json
frontend/my-project/app/: page.tsx
frontend/my-project/app/classify/: page.tsx
frontend/my-project/app/detect/: page.tsx
frontend/my-project/app/pose/: page.tsx
frontend/my-project/app/segment/: page.tsx
frontend/my-project/components/inference/: inference.tsx
