[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dongjun Lee <34564962+hyanghoa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
aiohttp = "^3.9.3"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
